--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@babel/core": "^7.16.0",
 		"@babel/preset-env": "^7.16.4",
 		"@babel/preset-typescript": "^7.16.0",
+		"@types/express": "^4.17.13",
 		"@types/jest": "^27.0.3",
 		"@types/node": "^16.11.12",
 		"babel-jest": "^27.4.4",
