--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "async-node-logger",
 	"version": "1.0.1",
 	"description": "",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc",
 		"test": "jest",
