--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"/dist/**"
 	],
 	"author": "",
-	"license": "ISC",
+	"license": "MIT",
 	"devDependencies": {
 		"@babel/core": "^7.16.0",
 		"@babel/preset-env": "^7.16.4",
